--- a/auctions/templates/auctions/createlisting.html
+++ b/auctions/templates/auctions/createlisting.html
@@ -3,17 +3,21 @@
 
 {% block body %}
 
-<h3>Create Listing</h3>
+<h3 class="display-3 text-center mt-5">Create Listing</h1>
+<hr class="w-50 mx-auto">
+<!-- <h3>Create Listing</h3> -->
 
 {% if message %}
-{{message}}
+<div class="text-danger">{{message}}</div>
 {% endif %}
 
-<form enctype="multipart/form-data" action="{% url 'auctions:createlisting' %}" method="post">
+<div class="d-flex justify-content-center align-items-center">
+<form enctype="multipart/form-data" action="{% url 'auctions:createlisting' %}" method="post" class="mt-3 ">
     {% csrf_token %}
     {{ListingForm}}
-    <input type="submit" value="Create Listing">
+    <input class="btn btn-outline-warning mb-4" type="submit" value="Create Listing">
 </form>
+</div>
 
 
 {% endblock %}
