--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -79,11 +79,10 @@
             <div class="row d-flex flex-wrap justify-content-between align-items-center ">
               <div class="col-md-4 d-flex align-items-center">
             <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-              <!-- <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg> -->
               <img src="{% static 'auctions/logo.png' %}" alt="Logo" width="26" height="26" class="d-inline-block align-text-top">
 
             </a>
-            <span class="mb-3 mb-md-0 text-body-primary text-capitalize text-warning ">This App is made with  <i class="fa-solid fa-heart"></i> by Saad Hussain.</span>
+            <span class="mb-3 mb-md-0 text-body-primary text-capitalize text-warning ">This App is made with  <i class="fa-solid fa-heart"></i> by <a class="text-warning" target="_blank" href="https://github.com/SaadHusayn">Saad Hussain</a>.</span>
           </div>
       
           <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
