--- a/auctions/templates/auctions/register.html
+++ b/auctions/templates/auctions/register.html
@@ -3,7 +3,6 @@
 
 {% block body %}
 
-    <h2>Register</h2>
 
     <div class="d-flex align-items-center py-4">
         
@@ -39,7 +38,7 @@
             
             <button class="btn btn-primary w-100 py-2 mt-4" type="submit">Register</button>
 
-            <p class="mt-3 mb-3 text-body-secondary">Already have an account? <a href="{% url 'auctions:login' %}">Log In here.</a></p>
+            <p class="mt-3 mb-3 text-body-secondary">Already have an account? <a class="hover-effect" href="{% url 'auctions:login' %}">Log In here.</a></p>
           </form>
         </main>
         
