--- a/auctions/templates/auctions/login.html
+++ b/auctions/templates/auctions/login.html
@@ -33,7 +33,7 @@
             Remember me
           </label>
         </div>
-        <button class="btn btn-primary w-100 py-2" type="submit">Log in</button>
+        <button class="btn btn-outline-warning w-100 py-2" type="submit">Log in</button>
       </form>
     </main>
     
