--- a/auctions/templates/auctions/register.html
+++ b/auctions/templates/auctions/register.html
@@ -36,7 +36,7 @@
             </div>
         
             
-            <button class="btn btn-primary w-100 py-2 mt-4" type="submit">Register</button>
+            <button class="btn btn-outline-warning w-100 py-2 mt-4" type="submit">Register</button>
 
             <p class="mt-3 mb-3 text-body-secondary">Already have an account? <a class="hover-effect" href="{% url 'auctions:login' %}">Log In here.</a></p>
           </form>
